# ephemeral-nixos-on-discord

./: CLAUDE.md  Cargo.toml  Procfile  README.md  flake.nix  mkdocs.yml
.github/workflows/: docs.yml
artifacts/: devlog.md  plan_system-prompt-edge-cases.md
artifacts/skills/: llm-system-prompt-edge-case-testing-methodology.md
docs/: architecture.md  commands.md  getting-started.md  index.md  llm-backends.md  networking.md  nixos-module.md
docs/plans/: 2026-03-04-ephemeral-nixos-discord-bot-design.md  2026-03-04-implementation-plan.md
nix/: base-vm.nix  host.nix
nix/networking/: README.md  bridge.nix  veth.nix
src/: lib.rs  main.rs
src/bot/: commands.rs  handler.rs  mod.rs
src/llm/: agent.rs  anthropic.rs  config_gen.rs  mod.rs  ollama.rs  openai.rs  tools.rs  traits.rs
src/qga/: client.rs  mod.rs  protocol.rs
src/session/: mod.rs  rate_limiter.rs  tracker.rs
src/vm/: config.rs  manager.rs  mod.rs
tests/: mock-qga-agent-test.rs  nixos-test.nix  qga-live-test.rs
