[package]
name = "ephemeral-nixos-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
